--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,8 +92,7 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit fix --force
             npm audit --audit-level=critical
-<<<<<<< Updated upstream
-=======
+
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
@@ -326,18 +325,31 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
+      - build-frontend:
+          filters:
+            branches:
+              only: [dev-branch]
+      - build-backend:
+          filters:
+            branches:
+              only: [dev-branch]
       - test-frontend:
           requires: [build-frontend]
-<<<<<<< Updated upstream
+          filters:
+            branches:
+              only: [dev-branch]
       - test-backend:
           requires: [build-backend]
+          filters:
+            branches:
+              only: [dev-branch]
       - scan-backend:
           requires: [build-backend]
+          filters:
+            branches:
+              only: [dev-branch]
       - scan-frontend:
           requires: [build-frontend]
-=======
           filters:
             branches:
               only: [dev-branch]
@@ -370,4 +382,3 @@ workflows:
       - smoke-test:
           requires: [sleep_60]
       
->>>>>>> Stashed changes
