--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,8 +325,9 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update curl
-            apk add --no-cache aws-cli
+            apk add --no-cache bash
+            apk add --update tar gzip curl
+            pip install awscli
       - run:
           name: Backend smoke test.
           command: |
