--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ commands:
           name: Revert migrations
           when: on_fail
           command: |
-            SUCCESS=$(curl "https://kvdb.io/UY8HEmETno9p44hJPWTd6y/migration_${CIRCLE_WORKFLOW_ID:0:7}")
+            SUCCESS=1
             if(( $SUCCESS==1 ))
             then
               cd ~/project/backend
@@ -319,99 +319,99 @@ jobs:
       - run: sleep 60;
   smoke-test:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: alpine:latest
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
             apk add --no-cache bash
-            apk add --update tar gzip curl
-            pip install awscli
-      - run:
-          name: Backend smoke test.
-          command: |
-            export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:project,Values=udapeople" --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "${API_URL}"
-            if curl "${API_URL}/api/status" | grep "ok"
-            then
-                return 0
-            else
-                return 1
-            fi
-      - run:
-          name: Frontend smoke test.
-          command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-            echo ${URL} 
-            if curl -s ${URL} | grep "Welcome"
-            then
-                # Change this to 0 after the job fails
-              return 1
-            else
-              return 1
-            fi
+            # apk add --update tar gzip curl
+            # pip install awscli
+      # - run:
+      #     name: Backend smoke test.
+      #     command: |
+      #       export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:project,Values=udapeople" --output text)
+      #       export API_URL="http://${BACKEND_IP}:3030"
+      #       echo "${API_URL}"
+      #       if curl "${API_URL}/api/status" | grep "ok"
+      #       then
+      #           return 0
+      #       else
+      #           return 1
+      #       fi
+      # - run:
+      #     name: Frontend smoke test.
+      #     command: |
+      #       URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+      #       echo ${URL} 
+      #       if curl -s ${URL} | grep "Welcome"
+      #       then
+      #           # Change this to 0 after the job fails
+      #         return 1
+      #       else
+      #         return 1
+      #       fi
       # Here's where you will add some code to rollback on failure  
-      - destroy-environment
+      # - destroy-environment
       - revert-migrations
 workflows:
   default:
     jobs:
-      - build-frontend:
-          filters:
-            branches:
-              only: [dev-branch]
-      - build-backend:
-          filters:
-            branches:
-              only: [dev-branch]
-      - test-frontend:
-          requires: [build-frontend]
-          filters:
-            branches:
-              only: [dev-branch]
-      - test-backend:
-          requires: [build-backend]
-          filters:
-            branches:
-              only: [dev-branch]
-      - scan-backend:
-          requires: [build-backend]
-          filters:
-            branches:
-              only: [dev-branch]
-      - scan-frontend:
-          requires: [build-frontend]
-          filters:
-            branches:
-              only: [dev-branch]
-      - test-backend:
-          requires: [build-backend]
-          filters:
-            branches:
-              only: [dev-branch]
-      - scan-backend:
-          requires: [build-backend]
-          filters:
-            branches:
-              only: [dev-branch]
-      - scan-frontend:
-          requires: [build-frontend]
-          filters:
-            branches:
-              only: [dev-branch]
-      - deploy-infrastructure
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
-      - deploy-backend:
-          requires: [run-migrations]
-      - sleep_60:
-          requires: [deploy-backend,deploy-frontend]
+      # - build-frontend:
+      #     filters:
+      #       branches:
+      #         only: [dev-branch]
+      # - build-backend:
+      #     filters:
+      #       branches:
+      #         only: [dev-branch]
+      # - test-frontend:
+      #     requires: [build-frontend]
+      #     filters:
+      #       branches:
+      #         only: [dev-branch]
+      # - test-backend:
+      #     requires: [build-backend]
+      #     filters:
+      #       branches:
+      #         only: [dev-branch]
+      # - scan-backend:
+      #     requires: [build-backend]
+      #     filters:
+      #       branches:
+      #         only: [dev-branch]
+      # - scan-frontend:
+      #     requires: [build-frontend]
+      #     filters:
+      #       branches:
+      #         only: [dev-branch]
+      # - test-backend:
+      #     requires: [build-backend]
+      #     filters:
+      #       branches:
+      #         only: [dev-branch]
+      # - scan-backend:
+      #     requires: [build-backend]
+      #     filters:
+      #       branches:
+      #         only: [dev-branch]
+      # - scan-frontend:
+      #     requires: [build-frontend]
+      #     filters:
+      #       branches:
+      #         only: [dev-branch]
+      # - deploy-infrastructure
+      # - configure-infrastructure:
+      #     requires: [deploy-infrastructure]
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
+      # - deploy-frontend:
+      #     requires: [run-migrations]
+      # - deploy-backend:
+      #     requires: [run-migrations]
+      # - sleep_60:
+      #     requires: [deploy-backend,deploy-frontend]
       - smoke-test:
-          requires: [sleep_60]
+          # requires: [sleep_60]
       
