--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -412,6 +412,6 @@ workflows:
       #     requires: [run-migrations]
       # - sleep_60:
       #     requires: [deploy-backend,deploy-frontend]
-      - smoke-test:
+      - smoke-test
           # requires: [sleep_60]
       
