--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -413,6 +413,8 @@ workflows:
       #     requires: [run-migrations]
       # - sleep_60:
       #     requires: [deploy-backend,deploy-frontend]
-      - smoke-test
+      - smoke-test:
+          requires:
+            - shellcheck/check
           # requires: [sleep_60]
       
