--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 
 orbs:
-  shellcheck: circleci/shellcheck@x.y.z
+  shellcheck: circleci/shellcheck@3.1.1
 commands:
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
