--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,13 +26,13 @@ commands:
           name: Revert migrations
           when: on_fail
           command: |
-            SUCCESS=1
+            bash -c 'SUCCESS=1
             if(( $SUCCESS==1 ))
             then
               cd ~/project/backend
               npm install
               npm run migrations:revert
-            fi     
+            fi     '
 jobs:
   build-frontend:
     docker:
