--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -405,7 +405,9 @@ jobs:
                     list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                     --no-paginate --output text)
             echo OldWorkflowID: "${OldWorkflowID}"
-            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+            export CURRENT_ID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}"
+            echo CURRENT_ID: "${CURRENT_ID}"
+            echo OldWorkflowID: "${OldWorkflowID}"
             # Fetch the stack names          
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                     --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
@@ -413,7 +415,7 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
-            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OldWorkflowID}" ]]
+            if [[ "${CURRENT_ID}" =~ "${OldWorkflowID}" ]]
             then
               echo "----------------- clean up -----------------"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
