--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -401,13 +401,13 @@ jobs:
           name: Get old stack workflow id
           command: |
             # Fetch the Old workflow ID
-            export OldWorkflowID=$(aws cloudformation \
+            export OldWorkflow=$(aws cloudformation \
                     list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
                     --no-paginate --output text)
+            export OldWorkflowID=${OldWorkflow#"udapeople-"}
+    
             echo OldWorkflowID: "${OldWorkflowID}"
-            export CURRENT_ID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}"
-            echo CURRENT_ID: "${CURRENT_ID}"
-            echo OldWorkflowID: "${OldWorkflowID}"
+            echo CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
             # Fetch the stack names          
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                     --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
@@ -415,12 +415,12 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
-            if [[ "${CURRENT_ID}" =~ "${OldWorkflowID}" ]]
+            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" && "${OldWorkflowID}" != "" ]]
             then
               echo "----------------- clean up -----------------"
-              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws s3 rm "s3://${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
             else
               echo "----------------- no clean up -----------------"
             fi
