--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -423,64 +423,64 @@ jobs:
 workflows:
   default:
     jobs:
-      # - build-frontend:
-      #     filters:
-      #       branches:
-      #         only: [dev-branch]
-      # - build-backend:
-      #     filters:
-      #       branches:
-      #         only: [dev-branch]
-      # - test-frontend:
-      #     requires: [build-frontend]
-      #     filters:
-      #       branches:
-      #         only: [dev-branch]
-      # - test-backend:
-      #     requires: [build-backend]
-      #     filters:
-      #       branches:
-      #         only: [dev-branch]
-      # - scan-backend:
-      #     requires: [build-backend]
-      #     filters:
-      #       branches:
-      #         only: [dev-branch]
-      # - scan-frontend:
-      #     requires: [build-frontend]
-      #     filters:
-      #       branches:
-      #         only: [dev-branch]
-      # - test-backend:
-      #     requires: [build-backend]
-      #     filters:
-      #       branches:
-      #         only: [dev-branch]
-      # - scan-backend:
-      #     requires: [build-backend]
-      #     filters:
-      #       branches:
-      #         only: [dev-branch]
-      # - scan-frontend:
-      #     requires: [build-frontend]
-      #     filters:
-      #       branches:
-      #         only: [dev-branch]
-      # - deploy-infrastructure
-      # - configure-infrastructure:
-      #     requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #     requires: [run-migrations]
-      # - deploy-backend:
-      #     requires: [run-migrations]
-      # - sleep_60:
-      #     requires: [deploy-backend,deploy-frontend]
-      # - smoke-test:
-      #     requires: [sleep_60]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
-      - cleanup
-          # requires: [cloudfront-update]
+      - build-frontend:
+          filters:
+            branches:
+              only: [dev-branch]
+      - build-backend:
+          filters:
+            branches:
+              only: [dev-branch]
+      - test-frontend:
+          requires: [build-frontend]
+          filters:
+            branches:
+              only: [dev-branch]
+      - test-backend:
+          requires: [build-backend]
+          filters:
+            branches:
+              only: [dev-branch]
+      - scan-backend:
+          requires: [build-backend]
+          filters:
+            branches:
+              only: [dev-branch]
+      - scan-frontend:
+          requires: [build-frontend]
+          filters:
+            branches:
+              only: [dev-branch]
+      - test-backend:
+          requires: [build-backend]
+          filters:
+            branches:
+              only: [dev-branch]
+      - scan-backend:
+          requires: [build-backend]
+          filters:
+            branches:
+              only: [dev-branch]
+      - scan-frontend:
+          requires: [build-frontend]
+          filters:
+            branches:
+              only: [dev-branch]
+      - deploy-infrastructure
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
+      - sleep_60:
+          requires: [deploy-backend,deploy-frontend]
+      - smoke-test:
+          requires: [sleep_60]
+      - cloudfront-update:
+          requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
       
