--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -374,13 +374,10 @@ jobs:
           name: Get old stack workflow id
           command: |
             # Fetch the Old workflow ID
-            export OldWorkflow=$(aws cloudformation \
+            aws cloudformation \
                     list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-                    --no-paginate --output text)
-            export OldWorkflowID=${OldWorkflow#"udapeople-"}
-    
-            echo OldWorkflowID: "${OldWorkflowID}"
-            echo CIRCLE_WORKFLOW_ID: "${CIRCLE_WORKFLOW_ID:0:7}"
+                    --no-paginate --output text > ~/old_workflow_id.txt
+            cat ~/old_workflow_id.txt
       - run:
           name: Update cloudfront distribution
           command: |
@@ -390,6 +387,10 @@ jobs:
                     --stack-name InitialStack \
                     --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
                     --tags project=udapeople
+      - persist_to_workspace:
+        root: ~/
+        paths: old_workflow_id.txt
+
       # Here's where you will add some code to rollback on failure  
       - destroy-environment
       - revert-migrations
@@ -411,6 +412,11 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
+            
+            echo "------------ old workflow id ----------------"
+            export OldWorkflowID=$(cat ~/old_workflow_id.txt)
+            echo ${OldWorkflowID}
+
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" && "${OldWorkflowID}" != "" ]]
             then
               echo "----------------- clean up -----------------"
