--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -414,13 +414,14 @@ jobs:
           command: |
             
             echo "------------ old workflow id ----------------"
-            export OldWorkflowID=$(cat ~/old_workflow_id.txt)
+            export OldWorkflow=$(cat ~/old_workflow_id.txt)
+            export OldWorkflowID=${OldWorkflow#"udapeople-"}
             echo ${OldWorkflowID}
 
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" && "${OldWorkflowID}" != "" ]]
             then
               echo "----------------- clean up -----------------"
-              aws s3 rm "s3://${OldWorkflowID}" --recursive
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
             else
