--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -237,7 +237,7 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            export BACKEND_IPP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[0].PublicIpAddress' --filters "Name=tag:project,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --output text)
+            export BACKEND_IPP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[0].PublicDnsName' --filters "Name=tag:project,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --output text)
             export API_URL="http://${BACKEND_IPP}:3030"
             echo "${API_URL}"
             echo API_URL="http://${BACKEND_IPP}:3030" >> frontend/.env
