--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -24,8 +24,6 @@ Resources:
         - IpProtocol: tcp
           FromPort: 9100
           ToPort: 9100
-          CidrIp: 0.0.0.0/0
-
   EC2Instance:
     Type: AWS::EC2::Instance
     Properties:
@@ -38,4 +36,7 @@ Resources:
       ImageId: ami-09d56f8956ab235b3 
       Tags:
         - Key: Name
-          Value: !Sub backend-${ID}
+  ElasticIP:
+    Type: AWS::EC2::EIP
+    Properties: 
+      InstanceId: !Ref 'EC2Instance'
